added func to global space

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <div class="row h-100">
             <div class="col-12 col-md-5 d-flex flex-column justify-content-start justify-content-md-center">
                 <div class="hero-section text-center text-md-start">
-                    <h1 class="mb-5 d-none d-md-block">
+                    <h1 class="hero-heading mb-5 d-none d-md-block">
                         <span>Shop Now</span>.<br>
                         <span>Pay Later.</span>
                     </h1>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="d-flex align-items-center position-relative d-md-none w-100 hero-img--mobile">
                     <div class="hero-img">
-                        <img src="assets/img/tiny-gif.gif" alt="">
+                        <img src="assets/img/tiny-gif.gif" alt="Buy Now Pay Later">
                     </div>
                 </div>
                 <div class="hero-section text-center text-md-start mt-5 mt-md-0">
@@ -53,20 +53,20 @@
         <div class="row step-block">
             <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="100"
                 data-aos-duration="1000">
-                <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="">
+                <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="Online shopping">
                 <h3 class="step-no mb-2">01.</h3>
                 <h5 class="px-sm-4">Add your favourite items to the cart and select Mintpay as the payment option at the
                     checkout.</h5>
             </div>
             <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="200"
                 data-aos-duration="1000">
-                <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="">
+                <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="Payment gateway with EMI">
                 <h3 class="step-no mb-2">02.</h3>
                 <h5 class="px-sm-4">Your purchase is split into 3 installments. Just pay the first installment to
                     complete the checkout process.</h5>
             </div>
             <div class="col-12 col-lg-4" data-aos="flip-left" data-aos-offset="300" data-aos-duration="1000">
-                <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="">
+                <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="Online delivery">
                 <h3 class="step-no mb-2">03.</h3>
                 <h5 class="px-sm-4">Your order is on the way! The remaining 2 installments will automatically be charged
                     from your card on their due dates.</h5>
@@ -99,7 +99,7 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="img-wrapper">
-                    <img src="assets/img/shopping-freedom.png" alt="" data-aos="fade-right" data-aos-offset="100"
+                    <img src="assets/img/shopping-freedom.png" alt="shopping clothes" data-aos="fade-right" data-aos-offset="100"
                         data-aos-duration="1000">
                 </div>
             </div>
