--- a/src/men.html
+++ b/src/men.html
@@ -26,7 +26,7 @@
                         <img src="assets/img/stores/stripes_and_checks.jpg" alt="">
                         <div class="store-link">
                             <a href="https://stripesandchecksinc.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="stripesandchecksinc,shirts,polo t-shirts">
                             </a>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                         <img src="assets/img/stores/ekko.jpg" alt="">
                         <div class="store-link">
                             <a href="https://zigmajones.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="ekko,shirts">
                             </a>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                         <img src="assets/img/stores/thirteen_31.png" alt="">
                         <div class="store-link">
                             <a href="https://www.thirteen31.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="thirteen31,shirts">
                             </a>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                         <img src="assets/img/stores/foa.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.foaclothing.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="foa,gym clothes">
                             </a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <img src="assets/img/stores/prime-culture.jpg" alt="">
                         <div class="store-link">
                             <a href="https://primeculture.co/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="primeclothing, workout attire">
                             </a>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                         <img src="assets/img/stores/clubhouse_men.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.clubhousevivaldi.lk/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="clubhouse, underwear">
                             </a>
                         </div>
                     </div>
