--- a/src/stores.html
+++ b/src/stores.html
@@ -44,7 +44,7 @@
                         <img src="assets/img/stores/spa-ceylon.jpg" alt="">
                         <div class="store-link">
                             <a href="https://lk.spaceylon.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
                             </a>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                         <img src="assets/img/stores/zigzag-old.jpg" alt="">
                         <div class="store-link">
                             <a href="http://zigzag.lk" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag">
                             </a>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         <img src="assets/img/stores/stripes-checks.jpg" alt="">
                         <div class="store-link">
                             <a href="https://stripesandchecksinc.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="stripesandchecks,shirts">
                             </a>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                         <img src="assets/img/stores/clubhouse.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.clubhousevivaldi.lk/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="clubhouse,underwear">
                             </a>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
                             <a href="http://zigzag.lk" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag,linen">
                             </a>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <img src="assets/img/stores/zigmajones.jpg" alt="">
                         <div class="store-link">
                             <a href="https://zigmajones.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="zigmajones">
                             </a>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         <img src="assets/img/stores/dilfer.png" alt="">
                         <div class="store-link">
                             <a href="https://www.dilferclothing.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/dilfer.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/dilfer.png" alt="dress, linen, dilfer">
                             </a>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                         <img src="assets/img/stores/will-by-zac.jpg" alt="">
                         <div class="store-link">
                             <a href="https://willbyzac.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac, dress, linen">
                             </a>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                         <img src="assets/img/stores/stripes_and_checks.jpg" alt="">
                         <div class="store-link">
                             <a href="https://stripesandchecksinc.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="stripesandchecks">
                             </a>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                         <img src="assets/img/stores/ekko.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.ekko.style/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="ekko">
                             </a>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                         <img src="assets/img/stores/thirteen_31.png" alt="">
                         <div class="store-link">
                             <a href="https://www.thirteen31.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="shirts,jumpsuit">
                             </a>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                         <img src="assets/img/stores/foa.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.foaclothing.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="foa,crop tops">
                             </a>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         <img src="assets/img/stores/spa-ceylon.jpg" alt="">
                         <div class="store-link">
                             <a href="https://lk.spaceylon.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="spaceylon">
                             </a>
                         </div>
                     </div>
@@ -239,7 +239,7 @@
                         <img src="assets/img/stores/iris-garden.jpg" alt="">
                         <div class="store-link">
                             <a href="https://irisgarden.lk/" target="_blank">
-                                <img class="square-logo" src="assets/img/stores/logos/iris-garden.png" alt="">
+                                <img class="square-logo" src="assets/img/stores/logos/iris-garden.png" alt="irisgarden">
                             </a>
                         </div>
                     </div>
@@ -250,8 +250,8 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/urban.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://urban.lk/mintpay" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="">
+                            <a href="https://urban.lk/perfumes" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="urban">
                             </a>
                         </div>
                     </div>
@@ -275,7 +275,7 @@
                         <img src="assets/img/stores/glitteray_new.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.glitterayjewellery.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/glitteray.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/glitteray.png" alt="jewellery,rings, earrings">
                             </a>
                         </div>
                     </div>
