--- a/src/women.html
+++ b/src/women.html
@@ -26,7 +26,7 @@
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
                             <a href="http://zigzag.lk" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag,linen">
                             </a>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                         <img src="assets/img/stores/zigmajones.jpg" alt="">
                         <div class="store-link">
                             <a href="https://zigmajones.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="zigmajones,jumpsuit">
                             </a>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                         <img src="assets/img/stores/dilfer.png" alt="">
                         <div class="store-link">
                             <a href="https://www.dilferclothing.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/dilfer.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/dilfer.png" alt="dilfer,linen">
                             </a>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                         <img src="assets/img/stores/will-by-zac.jpg" alt="">
                         <div class="store-link">
                             <a href="https://willbyzac.com/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="willbyzac,designerwear">
                             </a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <img src="assets/img/stores/emaan.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.emaanqirat.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/emaan.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/emaan.png" alt="emaanqirat">
                             </a>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                         <img src="assets/img/stores/thirteen_women.png" alt="">
                         <div class="store-link">
                             <a href="https://www.thirteen31.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="thirteen31, shirts">
                             </a>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                         <img src="assets/img/stores/ekko_women.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.ekko.style/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="ekko">
                             </a>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                         <img src="assets/img/stores/foa_women.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.foaclothing.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="foa,croptops">
                             </a>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                         <img src="assets/img/stores/clubhouse_women.png" alt="">
                         <div class="store-link">
                             <a href="https://www.clubhousevivaldi.lk/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="clubhouse,underwear">
                             </a>
                         </div>
                     </div>
