--- a/src/women.html
+++ b/src/women.html
@@ -25,7 +25,7 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
-                            <a href="http://zigzag.lk" target="_blank">
+                            <a href="https://zigzag.lk" target="_blank">
                                 <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag,linen">
                             </a>
                         </div>
