--- a/src/stores.html
+++ b/src/stores.html
@@ -1,4 +1,4 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Online Shopping with Buy Now Pay Late", "pageDescription": "Indulge in the most cost-effective and convenient online shopping experience using the Mintpay Buy Now Pay Later feature with our catalogue of partnered merchants. Our merchant partners include the best online stores in Sri Lanka. Mintpay is your ideal partner when it comes to shopping for clothes online in Sri Lanka"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Online Shopping with Buy Now Pay Later", "pageDescription": "Indulge in the most cost-effective and convenient online shopping experience using the Mintpay Buy Now Pay Later feature with our catalogue of partnered merchants. Our merchant partners include the best online stores in Sri Lanka. Mintpay is your ideal partner when it comes to shopping for clothes online in Sri Lanka"}'>
 </include>
 
 <section class="sub-page-header-section pink-bg">
@@ -55,7 +55,7 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag-old.jpg" alt="">
                         <div class="store-link">
-                            <a href="http://zigzag.lk" target="_blank">
+                            <a href="https://zigzag.lk" target="_blank">
                                 <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag">
                             </a>
                         </div>
@@ -105,7 +105,7 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
-                            <a href="http://zigzag.lk" target="_blank">
+                            <a href="https://zigzag.lk" target="_blank">
                                 <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="zigzag,linen">
                             </a>
                         </div>
@@ -248,7 +248,7 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/urban.jpg" alt="">
+                        <img src="assets/img/stores/urban-new.jpg" alt="">
                         <div class="store-link">
                             <a href="https://urban.lk/perfumes" target="_blank">
                                 <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="urban">
@@ -256,6 +256,18 @@
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Urban</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/ancient_2.png" alt="">
+                        <div class="store-link">
+                            <a href="https://ancientnutra.com/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/ancient.png" alt="ancient nutraceuticals">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Ancient Nutraceuticals</h5>
                 </div>
 
             </div>
