best web logo added

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
         </div>
     </div>
 
+    <script language="Javascript" src="https://www.bw2021.lk/stats.php?page=2021"/></script>
+    <a class="best-web-logo" href="http://www.bestweb.lk/vote/site/mintpay_lk" target="_blank"><img src="https://www.bw2021.lk/vote4us.png" alt="logo"/></a>
 
 </section>
 
